--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <html>
 <style>
+    
 body {
 background-image:url('llogo.png');
 background-position:center;
 background-repeat:no-repeat;
+font-family: monospace;
+font-size: 18px;
+color: green;
+}
+    
+div#content{
+  text-align:center;
+  width: 100%;
+    margin: auto auto;
 }
 </style>
 <body>
-
+  <div id="content">
+<br>
+www.lemonleafs.com<br><br>
+sales@lemonleafs.com<br>
+text: 818-917-7289<br>
+  </div>
 </body>
 </html>
